--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
-{ 
-  "versão" :  2 , 
-  "compilações" :  [ 
-    { 
-      "origem" :  "index.js" , 
-      "uso" :  "@vercel/node" 
-    } 
-  ] , 
-  "rotas" :  [ 
-    { 
-      "origem" :  "/(.*)" , 
-      "destino" :  "index.js" 
-    } 
-  ] 
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
 }
